solved horizontal scrolling issues

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -170,7 +170,7 @@ body {
 .wrapper {
   outline:0;
   position:absolute;
-  width:100%;
+  // width:100%;
   height:auto;
   left:30%;
   right:0;
@@ -178,7 +178,10 @@ body {
   bottom:0;
   background-color: #fff;
   overflow-x:hidden;
-  /*-webkit-overflow-scrolling:touch;*/
+  -webkit-box-sizing:border-box;
+  -moz-box-sizing:border-box;
+  box-sizing:border-box;
+  -webkit-overflow-scrolling:touch;
 }
 
 .wrapper-img {
@@ -193,9 +196,9 @@ body {
   -moz-background-size:cover;
   -o-background-size:cover;
   background-size:cover;
-/*  -webkit-box-shadow:inset -1px 0 0 rgba(0,0,0,0.3);
+  -webkit-box-shadow:inset -1px 0 0 rgba(0,0,0,0.3);
   -moz-box-shadow:inset -1px 0 0 rgba(0,0,0,0.3);
-  box-shadow:inset -1px 0 0 rgba(0,0,0,0.3)*/
+  box-shadow:inset -1px 0 0 rgba(0,0,0,0.3)
 }
 
 .wrapper-paper {
